--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
             <h1 class="page-title">About FOOD NOW</h1>
             <div class="static-page-content card">
                 <h3>Our Mission</h3>
-                <p>Our mission is to empower local restaurants and food businesses by helping them grow online. Many small vendors have great food but limited reach, so we aim to bridge that gap by providing a simple, effective platform where customers can easily browse menus and place orders directly from their website. By bringing their business online, restaurants can reach more people, increase daily orders, and earn extra income without any complicated setup. We want to support local talent, boost visibility, and make delicious food more accessible to everyone. Together, we help local food businesses expand and thrive in the digital world. <br>From Team (Shivam Singh,Shivam Giri,Shubham Singh,Rohan,Satyam Shukla)</p>
+                <p>Our mission is to empower local restaurants and food businesses by helping them grow online. Many small vendors have great food but limited reach, so we aim to bridge that gap by providing a simple, effective platform where customers can easily browse menus and place orders directly from their website. By bringing their business online, restaurants can reach more people, increase daily orders, and earn extra income without any complicated setup. We want to support local talent, boost visibility, and make delicious food more accessible to everyone. Together, we help local food businesses expand and thrive in the digital world. <br>From (Shivam Singh, Shivam Giri, Shubham Singh, Rohan Singh, Satyam Shukla)</p>
 
                 <!-- <h3>Our Story</h3>
                 <p>Praesent sapien massa, convallis a pellentesque nec, egestas non nisi. Curabitur aliquet quam id dui
@@ -500,3 +500,4 @@
 </body>
 
 </html>
+
